Button / Fix hover state for dark mode

--- a/themes/bw-home/src/css/atoms/button.css
+++ b/themes/bw-home/src/css/atoms/button.css
@@ -75,7 +75,8 @@ BUTTON
     border-color: var(--blue-50);
   }
 
-  .a-button:hover,.a-button:focus {
+  .a-button:hover,
+  .a-button:focus {
     background-color: var(--yellow);
     border-color: var(--yellow);
     color: var(--blue-90);
@@ -93,12 +94,12 @@ BUTTON
   border-color: var(--grey-60);
   border-left-color: var(--grey-30);
   border-top-color: var(--grey-30);
-  color: var(--white);
 }
 
 .a-button--secondary:focus-visible {
   background-color: var(--grey-70);
   border-color: var(--blue-30) !important;
+  color: var(--white);
 }
 
 .a-button--secondary:active {
@@ -106,4 +107,11 @@ BUTTON
   border-color: var(--grey-60);
   border-left-color: var(--grey-80);
   border-top-color: var(--grey-80);
+}
+
+@media (prefers-color-scheme: dark) {
+  .a-button--secondary,
+  .a-button--secondary:hover {
+    color: var(--white);
+  }
 }
